# ffmpeg_tutorial_win

./: CMakeLists.txt  main.cpp
demo/: audio_encoder.cpp  sdl_audio.cpp
include/libavutil/: error.h
